--- a/src/pages/pages-viewprofile/pages-viewprofile.html
+++ b/src/pages/pages-viewprofile/pages-viewprofile.html
@@ -77,7 +77,7 @@
                     <img class='profile_image_common_style ' *ngIf='!proimage ' src='../../assets/profile.png ' imageViewer>
                 </ion-avatar>
                 <div class='post_profile_name'>{{i.username}}</div>
-                <div class="dcicon" *ngIf='userid==i.userid ' (click)='deletepost(i._id) '>
+                <div class="dcicon" style="color:darkslateblue" *ngIf='userid==i.userid ' (click)='deletepost(i._id) '>
                 </div>
             </ion-item>
             <hr>
@@ -93,16 +93,16 @@
         <ion-row>
 
             <ion-col>
-                <button ion-button icon-start clear small>
+                <button ion-button icon-start clear small style="color:darkslateblue">
                     <ion-icon *ngIf='!liketoggle[i._id] ' name="ios-thumbs-up-outline"></ion-icon>
                     <ion-icon *ngIf='liketoggle[i._id] ' name="thumbs-up"></ion-icon>
       <div (click)="addlikes(j,userid,i._id)"><span style="color:black; ">{{i.likes}}</span> Like</div>
     </button>
             </ion-col>
             <ion-col>
-                <button ion-button icon-start clear small>
+                <button ion-button icon-start clear small style="color:darkslateblue">
       <ion-icon name="text"></ion-icon>
-      <div (click)='showcommenttoggle(j) '> View Comments</div>
+      <div (click)='showcommenttoggle(j) ' > View Comments</div>
     </button>
             </ion-col>
 
