--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,7 @@
 <ion-tabs class='ionTabs'>
-    <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+    <ion-tab [root]="tab1Root" tabIcon="home"></ion-tab>
     <!-- <ion-tab [root]="addpost" tabTitle="Add Post" class="tabico" tabIcon="add-circle"></ion-tab> -->
-    <ion-tab [root]="viewprofile" tabTitle="My Profile" tabIcon="person"></ion-tab>
-    <ion-tab [root]="chat" tabTitle="Chat" tabIcon="chatboxes"></ion-tab>
+    <ion-tab [root]="viewprofile" tabIcon="person"></ion-tab>
+    <ion-tab [root]="chat" tabIcon="chatboxes"></ion-tab>
+    <!-- <ion-tab [root]="testcamera" tabTitle="camera" tabIcon="camera"></ion-tab> -->
 </ion-tabs>
