added last seen service and design,added custom camera page for chat,added share option for post image,updated personalchat.ts,added content loader

--- a/src/pages/addpost/pages-addpost.html
+++ b/src/pages/addpost/pages-addpost.html
@@ -40,7 +40,7 @@
 
         <br>
         <div class="but">
-            <button ion-button (click)='addpost()'>Add</button>
+            <button ion-button style="background-color:darkslateblue" (click)='addpost()'>Add</button>
         </div>
     </div>
     <ion-item-divider></ion-item-divider>
