--- a/src/pages/pages-viewprofile/pages-viewprofile.html
+++ b/src/pages/pages-viewprofile/pages-viewprofile.html
@@ -60,6 +60,11 @@
                     <ion-icon name="calendar" *ngIf='dateOfBirth'></ion-icon>
                     <span id="profile-description" *ngIf='dateOfBirth'>{{dateOfBirth}}</span>
                 </div>
+                <div class='loader' *ngIf='!dateOfBirth'>
+                    <content-loader>
+                        <svg:rect x="90" y="45" rx="3" ry="3" width="150" height="15" />
+                    </content-loader>
+                </div>
                 <div class="personalInfo1">
                     <ion-icon [style.color]="gender=='male'?'blue':''" *ngIf="gender=='male'" name="male"></ion-icon>
                     <ion-icon [style.color]="gender=='female'?'deeppink':''" *ngIf="gender=='female'" name="female"></ion-icon>
@@ -68,7 +73,13 @@
 
         </div>
     </div>
-
+    <div class='loader' *ngIf='!post'>
+        <content-loader>
+            <svg:rect x="15" y="15" rx="1" ry="1" width="60" height="60" />
+            <svg:rect x="90" y="25" rx="3" ry="3" width="260" height="15" />
+            <svg:rect x="90" y="45" rx="3" ry="3" width="150" height="15" />
+        </content-loader>
+    </div>
     <ion-card *ngFor='let i of post,let j=index '>
         <ion-item-divider>
             <ion-item class='post_profile_info'>
