--- a/src/pages/pages-cameratest/pages-cameratest.html
+++ b/src/pages/pages-cameratest/pages-cameratest.html
@@ -5,11 +5,25 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-    <ion-navbar>
-        <ion-title>pages/cameratest</ion-title>
-    </ion-navbar>
-</ion-header>
 
+</ion-header>
+<div class='image' *ngIf='picture' [ngStyle]="{'background':'url('+picture+')'}">
+
+</div>
 <ion-content padding class='bg'>
-    <button (click)='openCamera()'></button>
+    <button class='back_icon' (click)='backToChat()'>
+        <ion-icon name="arrow-back"></ion-icon>
+        </button>
+    <div class='icons'>
+        <button class='rotate_icon' (click)='turnCamera()' *ngIf='!picture'>
+            <ion-icon name="reverse-camera"></ion-icon>
+            </button>
+        <button class='camera_icon' (click)='takePicture()' *ngIf='!picture'>
+            <ion-icon name='camera'></ion-icon>
+            </button>
+        <button class='send_icon' (click)='sendImage()' *ngIf='picture'>
+            <ion-icon ios="ios-send" md="md-send"></ion-icon>
+                </button>
+    </div>
+
 </ion-content>
